# tools

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  AGENTS.md  Makefile  Makefile.dc  README.md  docker-compose-dev.yml  docker-compose-example.yml  docker-compose-prod.yml  generate_colophon.py  manage.py  pyproject.toml
.github/: codeql-config.yml  dependabot.yml
.github/workflows/: ci.yaml  docker-build-push.yml  release.yaml  retry-failed-jobs.yaml
apps/anki-converter/: .air.toml  .dockerignore  CREDITS.md  Dockerfile  Dockerfile.serve  Makefile  README.md  go.mod  go.sum  nginx.conf  redirect.html
apps/anki2epub/: CREDITS.md  Dockerfile  README.md  next.config.ts  package.json
apps/bingo-creator/: .air.toml  CREDITS.md  Dockerfile  README.md  go.mod  go.sum
apps/clip2gist/: Dockerfile  README.md  example.env  package.json  tsconfig.json
apps/contact-sheet-creator/: .dockerignore  CREDITS.md  README.md  go.mod  go.sum
apps/emoji-identifier/: .dockerignore  README.md  index.html
apps/exiftools/: README.md  index.html
apps/film-format-converter/: Dockerfile  README.md  next.config.ts  package.json
apps/gh-dashboard/: .gitignore  CONTEXT.md  README.md  example.env  next.config.ts  package.json
apps/ghissue2md/: .dockerignore  README.md  index.html
scripts/: README-upgrading-nextjs.md  rollback-nextjs-upgrade.sh  update-js-apps.sh  upgrade-nextjs.sh
templates/: .dockerignore.go  Dockerfile.go  Dockerfile.html  Dockerfile.js.static  README.md  index.html  new_app_adjustments_prompt.md  remove_app_prompt.md  style.css
(+218 files in other folders)
