[project]
name = "tools"
version = "0.1.0"
description = "Scripts for tools repository"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3",
]

[project.scripts]
manage = "manage:main"
colophon = "generate_colophon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["manage.py", "generate_colophon.py"]

[tool.vulture]
min_confidence = 80
paths = ["manage.py", "generate_colophon.py"]
sort_by_size = true